# score_reading

./: .dockerignore  .env  .gitignore  Dockerfile.api  Dockerfile.web  README.md  cleanup_data.py  debug_gemini_raw.txt  docker-compose.yml  fix_kaldi_model.sh  generate_demo.py  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  test_nickname.py  verify_auto_transcribe.py  verify_fix.py  verify_sigmoid.py  停止.bat  启动.bat  查看日志.bat
advice/: phoneme_rules.yaml
config/: default.yaml
data/: jobs.json
data/uploads/20260203/: web_20260203231359_e6530fa5.txt
docker/: Dockerfile  Dockerfile.kaldi  Dockerfile.wav2vec2  docker-compose.yml  kaldi-run.sh
samples/: test_manifest.csv  test_tasks.yaml
src/: App.tsx  __init__.py  batch.py  cli.py  config.py  index.css  models.py
src/advice/: __init__.py  generator.py
src/analysis/: llm_advisor.py  llm_provider.py  openai_provider.py
src/components/: Features.tsx  Hero.tsx  Navigation.tsx  SettingsModal.tsx  UploadModal.tsx
src/pages/: Dashboard.tsx  History.tsx  ReportBuilder.tsx
src/pipeline/: __init__.py  analyze.py  normalize.py  preprocess.py  router.py  runner.py
src/pipeline/engines/: __init__.py  azure.py  fast.py  gemini.py  pro.py  standard.py  wav2vec2.py  whisper_engine.py
src/report/: __init__.py  render_html.py
src/report/templates/: report.html.j2
tests/: conftest.py  test_analyze.py  test_batch.py  test_engines.py  test_normalize.py  test_preprocess.py
